<resources>
    <string name="app_name">Shipment Tracker</string>
    <string name="new_shipment">New Shipment</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="title_hint">Title(optional)</string>
    <string name="carrier">Carrier</string>
    <string name="done">DONE</string>
    <string name="cancel">Cancel</string>
    <string name="dots">&#8942;</string>
    <string name="Archive">Archive</string>
    <string name="Delete">Delete</string>
    <string name="no_network">Could Not Connect To the Network</string>
    <string name="no_shipments">No Shipments</string>
    <string name="no_Archived_shipments">No Archived Shipments</string>
    <string name="weight">Weight</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="Route">Route</string>
    <string name="deliveryDate">Delivery by</string>
    <string name="archive_content_des">Archived shipments</string>
    <string name="checkpoint_content_des">Check points</string>
    <string name="last_location">Last location</string>
    <string name="last_update">Last update</string>
    <string name="update_date">Date of the update</string>
    <string name="shipping_title">Shipping title</string>
    <string name="options_des">Options</string>
    <string name="app_id">ca-app-pub-8577762809608928~8578625843</string>
    <string name="arrow_desc">menu arrow</string>
    <string name="add_desc">add Shipment</string>
    <string name="addtracking_fail">the tracking number is required</string>
    <string name="giveMeaMin">Please give the app  a minute too track the shipment</string>
    <string name="Shipments">Shipments</string>
    <string name="TrackingAlreadyExists">"Tracking Already Exists"</string>
    <string name="delivered">Delivered</string>
</resources>
