<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UI.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/carrier_img"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/carrier"
        android:src="@drawable/ups"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shipping_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/shipping_title"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/carrier_img"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Shipping Number/Title" />

    <TextView
        android:id="@+id/last_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/last_location"
        android:textColor="@color/secondaryText"
        app:layout_constraintStart_toEndOf="@+id/carrier_img"
        app:layout_constraintTop_toBottomOf="@+id/shipping_title"
        tools:text="In Transit. MEMPHIS" />

    <TextView
        android:id="@+id/expected_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/deliveryDate"
        android:textColor="@color/secondaryText"
        app:layout_constraintStart_toEndOf="@+id/carrier_img"
        app:layout_constraintTop_toBottomOf="@+id/last_destination"
        tools:text="23 May 2019" />

    <TextView
        android:id="@+id/textViewOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/options_des"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:text="@string/dots"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>