<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/popup_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dp"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="128dp">

    <TextView
        android:id="@+id/shipment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/new_shipment"
        android:text="@string/new_shipment"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tracking_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:contentDescription="Tracking number text field"
        android:ems="10"
        android:hint="@string/tracking_number"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracking_text" />

    <EditText
        android:id="@+id/title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:contentDescription="@string/title_content_des"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:textColor="@color/secondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracking_input" />

    <TextView
        android:id="@+id/tracking_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tracking_number"
        android:text="@string/tracking_number"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipment_text" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cancel"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintTop_toBottomOf="@+id/title_input" />

    <Button
        android:id="@+id/done"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/done"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input" />
</androidx.constraintlayout.widget.ConstraintLayout>